# isca-archive-analysis

./: .gitignore  .gitmodules  README.md  pyproject.toml  run_analysis.sh
.github/workflows/: default.yaml
helpers/: topic_analysis.sh
src/isca_archive/analyze/: analyze.py
src/isca_archive/analyze/commands/: co_author_extraction.py  generate_processed_dataset.py  topic_analysis.py  topic_area.py  topic_visualisation.py  word_cloud.py  zero_shot_topic.py
src/isca_archive/analyze/common/: args.py  author.py  bertopic_visualisation.py  dataset.py  llama_helpers.py  stopwords.py
src/isca_archive/resources/: ISCA_stop_words.txt  is_area_labels.tsv
src/isca_archive/resources/is_areas/: interspeech_2013.tsv  interspeech_2014.tsv
